--- a/src/main/B737Max/GUI/ResultsScreen.form
+++ b/src/main/B737Max/GUI/ResultsScreen.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="B737Max.GUI.ResultsScreen">
-  <grid id="27dc6" binding="ResultsPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="ResultsPanel" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -10,20 +10,9 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="dd0ac" class="javax.swing.JComboBox" binding="ResultsBox">
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <font name="Consolas" size="14"/>
-          <lightWeightPopupEnabled value="false"/>
-          <maximumRowCount value="20"/>
-          <popupVisible value="false"/>
-        </properties>
-      </component>
       <component id="d0c7c" class="javax.swing.JButton" binding="reserveTicketButton" default-binding="true">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="1" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="1" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font size="20"/>
@@ -53,6 +42,44 @@
         </constraints>
         <properties>
           <text value="Return to Search"/>
+        </properties>
+      </component>
+      <component id="8252e" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font size="16"/>
+          <text value="Available Flights:"/>
+        </properties>
+      </component>
+      <component id="dd0ac" class="javax.swing.JComboBox" binding="ResultsBox">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Consolas" size="14"/>
+          <lightWeightPopupEnabled value="false"/>
+          <maximumRowCount value="20"/>
+          <popupVisible value="false"/>
+        </properties>
+      </component>
+      <component id="f8971" class="javax.swing.JComboBox" binding="ResultsBoxR">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <enabled value="false"/>
+          <font name="Consolas" size="14"/>
+        </properties>
+      </component>
+      <component id="2e66b" class="javax.swing.JLabel" binding="lblReturn">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font size="16"/>
+          <text value="Return Flights:"/>
         </properties>
       </component>
     </children>
